syntax = "proto3";

package msg;

import "gogo.proto";

option (gogoproto.goproto_getters_all) = false;

// ============================================================================
// msgid range for C <-> GS: [13800, 13900)
// ============================================================================

import "c_gs.00.structs.proto";

// ============================================================================

// 七日之约
message DaySignData {
    repeated int32 Taken   = 1; // 已领取奖励
    int32          SignDay = 2; // 签到天数
    bool           Close   = 3; // 是否关闭
}

// ============================================================================

message C_DaySignTake { // msgid: 13820
    int32 Id = 1;
}

message GS_DaySignTake_R { // msgid: 13821
    int32   ErrorCode = 1;
    Rewards Rewards   = 2;
    bool    Close     = 3;
}
